# Nimorak

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  attack.c  attack.h  board.c  board.h  build.bat  build.sh  cmake_install.cmake  constants.h  eval.c  eval.h  evaluation.c  evaluation.h  helper.c  helper.h  magic.c  magic.h  main.c  movegen.c  movegen.h  nimorak.c  nimorak.h  perf.data  perf.data.old  perft.c  perft.h  quick_test.c  repetition.c  repetition.h  results.pgn  search.c  search.h  table.c  table.h  (+4 more)
include/: config.h  helpers.h  nimorak.h
include/board/: attack.h  board.h  movegen.h
include/core/: attack.hpp  board.hpp  eval.hpp  movegen.hpp  nimorak.hpp  perft.hpp  rune.hpp  search.hpp
include/nimorak/: config.h  constants.h  helpers.h  module.h
include/search/: eval.h  perft.h  search.h
include/storage/: openingbook.hpp  repetition.hpp  transposition.hpp
include/table/: magic.h  opening_book.h  repetition.h  table.h  transposition.h  zobrist.h
include/tables/: constants.hpp  helpers.hpp  magic.hpp  table.hpp  zobrist.hpp
include/utils/: config.hpp  module.hpp  tuning.hpp  uci.hpp
misc/: eval_roadmap.md  search_roadmap.md  sprt.md  sprt.py  sprt_test.bat  sptr_test.bat
opening_book/: games.uci  opening_book_builder.c  opening_book_converter.cpp  opening_book_converter2.cpp  opening_book_evaluator.py  opening_book_filter.cpp  uci_converter.py
src/: main.c  main.cpp
src/board/: attack.c  board.c  movegen.c
src/core/: attack.cpp  board.cpp  eval.cpp  movegen.cpp  nimorak.cpp  perft.cpp  (+3 more)
(+21 files in other folders)
